--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy 
-pandas
-scikit-learn
-streamlit
-feature-engine
-xgboost
-joblib
+streamlit==1.19.0
+numpy==1.26.4
+pandas==1.5.3
+scikit-learn==1.2.2
+feature-engine==1.6.2
+xgboost==1.7.6
+joblib==1.3.2
+altair==4.2.2
